# tech-challenge-fiap

./: .gitignore  .gitmodules  .pre-commit-config.yaml  404.html  AGENTS.md  ENTREGA_FASE_1.md  Makefile  README.md  Todos.md  _quarto.yml  duvidas-professor.md  index.html  pyproject.toml  requirements.txt  tech-challenge-fiap.code-workspace
.github/workflows/: docs.yml
assets/: extra.css
assets/figures/: eda-01-distribuicao-nps.html  eda-02-correlacoes.html  eda-03-heatmaps-grupos.html  eda-05-nps-por-perfil.html  eda-06-origem-detratores.html  eda-10-resolucao.html
data/: metadados_desafio_nps_fase_1.json
docs/: README.md  mkdocs.yml
docs/docs/: eda.md  faq.md  getting-started.md  index.md
docs/docs/assets/: extra.css
docs/docs/fase-1/: analise-hipoteses.md  apresentacao-final.md  avaliacao.md  business-canvas.md  case-nps-preditivo.md  eda.md  getting-started.md  index.md  planejamento.md  preparacao-dados.md  problema-negocio.md  proposta-solucao.md  reflexoes.md  resumo-entrega.md  slides.html
docs/docs/fase-2/: index.md
docs/docs/fase-3/: index.md
docs/docs/fase-4/: index.md
docs/docs/fase-5/: index.md
docs/html_genai/: Apresentacao_v2.html  Apresentação.html  apresentacao.html  apresentacao_print.html  apresentacao_v3.html  business-canvas.html
docs/overrides/: main.html
faq/: index.html
fase-1/: index.html  slides.html
fase-1/analise-hipoteses/: index.html
fase-1/apresentacao-final/: index.html
fase-1/avaliacao/: index.html
fase-1/business-canvas/: index.html
fase-1/case-nps-preditivo/: index.html
fase-1/eda/: index.html
fase-1/getting-started/: index.html
fase-1/planejamento/: index.html
fase-1/preparacao-dados/: index.html
fase-1/problema-negocio/: index.html
fase-1/proposta-solucao/: index.html
fase-1/reflexoes/: index.html
fase-1/resumo-entrega/: index.html
fase-2/: index.html
fase-3/: index.html
fase-4/: index.html
fase-5/: index.html
notebooks/: aula_eda_censo_escolar_2022_infraestrutura.ipynb  base_defesa.py  dados.ipynb  dados.py  eda_final.ipynb  eda_final.py
search/: search_index.json
tech_challenge_fase_1/: __init__.py  dataset.py  features.py  plots.py
tech_challenge_fase_1/modeling/: predict.py  train.py
tech_challenge_fiap/: __init__.py  dataset.py  features.py  plots.py
tech_challenge_fiap/modeling/: predict.py  train.py
(+9 files in other folders)
