[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[project]
name = "tech_challenge_fase_1"
version = "0.0.1"
description = "Análise preditiva de NPS para e-commerce — Tech Challenge Fase 1 POSTECH AI Scientist."
authors = [
  { name = "PHRaulino", email = "phraulino@outlook.com" },
]
readme = "README.md"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License"
]
dependencies = [
    "ipython",
    "jupyterlab",
    "loguru",
    "matplotlib",
    "mkdocs",
    "notebook",
    "numpy",
    "pandas",
    "pip",
    "pytest",
    "python-dotenv",
    "ruff",
    "scikit-learn",
    "tqdm",
    "typer",
    "jupyter (>=1.1.1,<2.0.0)",
]
requires-python = "~=3.12.0"


[tool.ruff]
line-length = 99
src = ["tech_challenge_fase_1"]
include = ["pyproject.toml", "tech_challenge_fase_1/**/*.py"]
extend-include = ["*.ipynb"]

[tool.ruff.lint]
extend-select = ["I"]

[tool.ruff.lint.isort]
known-first-party = ["tech_challenge_fase_1"]
lines-between-types = 1
