[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[project]
name = "tech_challenge_fiap"
version = "0.0.1"
description = "Tech Challenge Fiap POSTECH AI Scientist."
authors = [
  { name = "Paulo Henrique Almeida", email = "phraulino@outlook.com" },
]
readme = "README.md"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License"
]
dependencies = [
    "ipython",
    "jupyterlab",
    "loguru",
    "matplotlib",
    "mkdocs",
    "mkdocs-material",
    "notebook",
    "numpy",
    "pandas",
    "pip",
    "pytest",
    "python-dotenv",
    "ruff",
    "scikit-learn",
    "tqdm",
    "typer",
    "jupyter (>=1.1.1,<2.0.0)",
    "kagglehub (>=1.0.2,<2.0.0)",
    "plotly (>=6.8.0,<7.0.0)",
    "shap (>=0.52.0,<0.53.0)",
    "jupytext (>=1.19.3,<2.0.0)",
]
requires-python = "~=3.12.0"


[tool.ruff]
line-length = 99
src = ["tech_challenge_fiap"]
include = ["pyproject.toml", "tech_challenge_fiap/**/*.py"]
extend-include = ["*.ipynb"]

[tool.ruff.lint]
extend-select = ["I"]

[tool.ruff.lint.isort]
known-first-party = ["tech_challenge_fiap"]
lines-between-types = 1
